***********************************************************
**********| Version 2.3.0 - Released 2014-04-01 |**********
***********************************************************

* inplementation of Device Ident within main footer
* added separat upgrade file for each release version - solves troubles in case of modul updates
* added Whitelabel mode

***********************************************************
**********| Version 2.2.3 - Released 2014-02-13 |**********
***********************************************************

* minor changes in the checkout layout

***********************************************************
**********| Version 2.2.2 - Released 2014-02-06 |**********
***********************************************************

* IBAN validation without JS

***********************************************************
**********| Version 2.2.1 - Released 2014-01-30 |**********
***********************************************************

* improved IBAN validation
* changed sandbox mode - no decline of rp payment methods after negative response while sandbox mode

***********************************************************
**********| Version 2.2.0 - Released 2014-01-29 |**********
***********************************************************

* added SEPA functionality - includes IBAN and BIC fields and new text blocks
* deactivated saving of user bank account data

***********************************************************
**********| Version 2.1.1 - Released 2014-01-07 |**********
***********************************************************
 * better bundle handling
 * disable partial shipping refund

***********************************************************
**********| Version 2.1.0 - Released 2013-11-21 |**********
***********************************************************
 * allow differing billing and shipping addresses
 * send customer name and company (if necessary) within shipping address
