@@ -1,4 +1,10 @@
 ***********************************************************
+**********| Version 2.3.1 - Released 2014-05-14 |**********
+***********************************************************
+
+* fixed company-name xml tag in customer block
+
+***********************************************************
 **********| Version 2.3.0 - Released 2014-04-01 |**********
 ***********************************************************
 
